--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <meta 
+      name="google-signin-client_id" 
+      content="174389928584-m3a4ljtpsks71r09srq96fobsujg8l9v.apps.googleusercontent.com">
+
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <title>Rambler</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
