--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,7 @@
     -->
   <meta name="google-signin-client_id"
     content="174389928584-m3a4ljtpsks71r09srq96fobsujg8l9v.apps.googleusercontent.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/03e982b2da.js" crossorigin="anonymous"></script>
   <title>Rambler</title>
   <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
